<resources>
    <string name="app_name">BT Remote</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="bluetooth_not_supported_message">Your device does not support Bluetooth.</string>
    <string name="permission">Permission</string>
    <string name="bluetooth_permission_not_granted">Permission not granted</string>
    <string name="bluetooth_permission_message">You must authorize access to Bluetooth.</string>
    <string name="bluetooth_permission_button">Authorize</string>
    <string name="bluetooth_permission_denied_message">You\'ve denied Bluetooth access.</string>
    <string name="activation">Activation</string>
    <string name="bluetooth_disabled_info">Bluetooth disabled</string>
    <string name="bluetooth_disabled_message">The Bluetooth on your device must be enabled to connect to the remote device.</string>
    <string name="bluetooth_enabled_button">Enable Bluetooth</string>
    <string name="devices">Devices</string>
    <string name="paired_devices">Paired devices</string>
    <string name="unpair_device">Unpair device</string>
    <string name="unpair">Unpair</string>
    <string name="unpair_device_warning_message">This device will be completely unpaired from your device. Do you really want to continue?</string>
    <string name="unpair_device_successful">The device has been successfully dissociated.</string>
    <string name="unpair_device_failure">Failure! The device could not be dissociated.</string>
    <string name="automatic_connect">Automatic Connection</string>
    <string name="enabled_automatic_connection_message">Do you want to automatically connect to this device on app startup?</string>
    <string name="disabled_automatic_connection_message">Do you want to disable the automatic connection?</string>
    <string name="automatic_shorten">Auto</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="no_device_registered">No device is registered on this device.</string>
    <string name="pairing_a_device">Pairing a device</string>
    <string name="available_devices">Available devices</string>
    <string name="bluetooth_pairing_device_not_found">No device has been detected.</string>
    <string name="refresh">Refresh</string>
    <string name="pairing_from_the_remote_device">Pairing from the remote device</string>
    <string name="name_of_this_device">Name of this device : %1$s.</string>
    <string name="pairing_from_a_remote_device_intro_title">Guide to pair a device from the remote device</string>
    <string name="pairing_from_a_remote_device_intro_content">On some devices, Bluetooth visibility may be disabled, preventing them from being detected by the app. This guide will help you resolve the issue by explaining how to pair your devices directly from the remote device.</string>
    <string name="pairing_from_a_remote_device_step_1_title">1. Enable Bluetooth visibility</string>
    <string name="pairing_from_a_remote_device_step_1_content_1">You must first enable Bluetooth visibility on this device.</string>
    <string name="pairing_from_a_remote_device_step_1_content_2">This device should be visible to other devices under the name: %1$s.</string>
    <string name="enabled_bluetooth_visibility">Enabled Bluetooth visibility</string>
    <string name="pairing_from_a_remote_device_step_2_title">2. Pair the two devices</string>
    <string name="pairing_from_a_remote_device_step_2_content_1">On the remote device:</string>
    <string name="pairing_from_a_remote_device_step_2_content_2">- Open the Bluetooth settings.\n- Select the option to pair a new device.\n- The device \"%1$s\" should appear in the list of available devices.\n- Select the device \"%1$s\" to initiate pairing.</string>
    <string name="pairing_from_a_remote_device_step_2_content_3">A pairing confirmation request should appear on both devices. You must accept this request on both devices to complete the Bluetooth pairing.</string>
    <string name="pairing_from_a_remote_device_step_2_content_4">If no confirmation request appears, restart Bluetooth on the remote device and repeat the previous steps.</string>
    <string name="pairing_from_a_remote_device_step_3_title">3. Disconnect the devices</string>
    <string name="pairing_from_a_remote_device_step_3_content_1">If the pairing was successful, the Android device should automatically connect to the remote device. However, this connection does not use the HID (Human Interface Device) protocol, which prevents the remote control from working. To resolve this issue:</string>
    <string name="pairing_from_a_remote_device_step_3_content_2">- Go to the Bluetooth settings on your device.\n- Manually disconnect the remote device.</string>
    <string name="open_bluetooth_settings">Open the Bluetooth settings</string>
    <string name="pairing_from_a_remote_device_step_4_title">4. Finalization</string>
    <string name="pairing_from_a_remote_device_step_4_content">If you have followed all the previous steps, the pairing was successful, and you have disconnected both devices, you can select the \"%1$s\" button. The remote device should appear in the list of paired devices. Select it to establish the connection using the HID protocol.</string>
    <string name="done">Done</string>
    <string name="unknown">unknown</string>
    <string name="enter_bluetooth_address_manually">Enter Bluetooth address manually</string>
    <string name="bluetooth_address">Bluetooth address</string>
    <string name="bluetooth_address_prompt">Please enter the Bluetooth address of the remote device:</string>
    <string name="bluetooth_address_wrong_format">The entered address is in the wrong format. It must contain 6 pairs of hexadecimal characters.\nExample: 00:1A:2B:3C:4D:5E.</string>
    <string name="connection">Connection</string>
    <string name="bluetooth_device_connecting_message">Connecting to \"%1$s\" device…</string>
    <string name="bluetooth_device_disconnecting_message">Disconnecting \"%1$s\"…</string>
    <string name="bluetooth_failed_to_register_app_message">Failure to register the application. Please ensure that no other Bluetooth service is running in the background. If the error persists, it\'s possible that the Bluetooth process was unexpectedly interrupted. To fix this issue, please disable the Bluetooth on your device, then re-enable it.</string>
    <string name="bluetooth_failed_to_connect_to_device">The attempt to connect to the remote device failed.</string>
    <string name="bluetooth_failed_try_again">Please try again.</string>
    <string name="remote">Remote</string>
    <string name="more">More</string>
    <string name="disconnect">Disconnect</string>
    <string name="direction_arrows">Direction arrows</string>
    <string name="more_buttons">More Buttons</string>
    <string name="connect">Connect</string>
    <string name="media_controls">Media controls</string>
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">True black for the dark theme</string>
    <string name="theme_black_oled_info">Uses less energy on OLED screens</string>
    <string name="dynamic_colors">Dynamic colors</string>
    <string name="full_screen">Full screen</string>
    <string name="mouse_pointer_speed">Pointer speed</string>
    <string name="invert_mouse_scrolling_direction">Invert the scrolling direction</string>
    <string name="use_the_gyroscope_to_control_the_mouse">Use the gyroscope to control the mouse</string>
    <string name="keyboard_and_input_field">Keyboard and input field</string>
    <string name="clear_input_field">Clear input field after sending text</string>
    <string name="integrate_advanced_keyboard_into_the_view">Integrate the advanced keyboard into the view</string>
    <string name="user_interface">Interface</string>
    <string name="use_minimalist_interface">Use the minimalist interface</string>
    <string name="minimalist_interface_info">Does not display the TV channel buttons</string>
    <string name="navigation_mode">Navigation Mode</string>
    <string name="d_pad">D-pad</string>
    <string name="d_pad_description">Navigation via directional controls</string>
    <string name="touchpad">Touchpad</string>
    <string name="touchpad_description">Navigation via touch gestures</string>
    <string name="use_enter_for_selection_title">Use the Enter key for selection</string>
    <string name="use_enter_for_selection_summary">Enable this option only if the select button does not work</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="hide_bluetooth_activation_button">Hide Bluetooth activation button at app startup</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="third_party_library">Third-party libraries</string>
    <string name="website">Website</string>
    <string name="source_code">Source code</string>
    <string name="code_version">Version %1$s</string>
    <string name="keyboard">Keyboard</string>
    <string name="keyboard_language">Keyboard language</string>
    <string name="keyboard_language_info">Ensure that the selected keyboard language matches the one configured on the remote device.</string>
    <string name="advanced_keyboard">Advanced keyboard</string>
    <string name="keyboard_english_us">English (United States)</string>
    <string name="keyboard_english_uk">English (United Kingdom)</string>
    <string name="keyboard_spanish">Spanish</string>
    <string name="keyboard_french">French</string>
    <string name="keyboard_german">German</string>
    <string name="keyboard_russian">Russian</string>
    <string name="keyboard_czech">Czech</string>
    <string name="keyboard_polish">Polish</string>
    <string name="keyboard_portuguese">Portuguese</string>
    <string name="keyboard_portuguese_br">Portuguese (Brazil)</string>
    <string name="keyboard_greek">Greek</string>
    <string name="keyboard_turkish">Turkish</string>
    <string name="keyboard_hebrew">Hebrew</string>
    <string name="keyboard_bulgarian">Bulgarian</string>
    <string name="keyboard_ukrainian">Ukrainian</string>
    <string name="keyboard_persian">Persian</string>
    <string name="send">Send</string>
    <string name="enter">Enter</string>
    <string name="escape">Esc</string>
    <string name="delete">Delete</string>
    <string name="space_bar">Space Bar</string>
    <string name="print_screen">Print Screen</string>
    <string name="shift">Shift</string>
    <string name="meta">Meta</string>
    <string name="ctrl">Ctrl</string>
    <string name="alt">Alt</string>
    <string name="alt_gr">Alt Gr</string>
    <string name="pick">Pick</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="repeat">Repeat</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="previous_track">Previous Track</string>
    <string name="next_track">Next Track</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Forward</string>
    <string name="volume_up">Volume +</string>
    <string name="volume_down">Volume -</string>
    <string name="brightness_up">Brightness +</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
</resources>